--- a/front/src/scss/app.scss
+++ b/front/src/scss/app.scss
@@ -31,6 +31,9 @@
     padding: 10px 15px;
 }
 @media (min-width: 768px) {
+    .side-nav {
+        padding-bottom: 60px;
+    }
     .side-nav > li > span {
       width: 225px;
       padding-top: 15px;
